# happyml

./: .gitignore  CMakeLists.txt  LICENSE  README.md  STYLE.md  mnist test data.md
.github/workflows/: cmake.yml
docs/: COMPILING.md  INSTALL.md  KEYWORDS.md  NOTABLE_CHANGES.md  README.md  ROADMAP.md  SYNTAX.md  TYPES.md
docs/commands/: COPY_DATASET.md  COPY_TASK.md  CREATE_DATASET.md  CREATE_TASK.md  DELETE_DATASET.md  DELETE_TASK.md  DESCRIBE_DATASET.md  DESCRIBE_TASK.md  EXECUTE_TASK.md  EXIT.md  HELP.md  LET.md  LIST_DATASETS.md  LIST_TASKS.md  MOVE_DATASET.md  MOVE_TASK.md  PRINT_DATASET.md  REFINE_TASK.md  SET.md  SPLIT_DATASET.md
docs/examples/: IRIS.md  MNIST.md  TITANIC.md
happyml_repo/default_token_encoder/: default.bpe
happyml_repo/scripts/: iris.happyml  mnist.happyml  titanic.happyml
src/: activation.hpp  architecture.hpp  create_tokenizer.cpp  data.hpp  data_source.hpp  dataencoder.hpp  dataset.hpp  layer.hpp  loss.hpp  main.cpp  mbgd_optimizer.hpp  model.hpp  neural_network.hpp  neural_network_function.hpp  neuron.hpp  optimizer.hpp  quarter_float.hpp  sgd.hpp  sgd_optimizer.hpp  tensor.hpp  tensor_stats.hpp  test_data_source.cpp  test_file_reader.cpp  test_quarter_float.cpp  test_tensor.cpp  test_xor_model.cpp  test_xor_model_streamlined.cpp  unit_test.hpp
src/example/: README.md  example_binary_or_model.cpp  example_bpe_model.cpp  example_categorical_xor_model.cpp  example_hyperband.cpp  example_mnist_model.cpp  example_mnist_model_8bit.cpp  example_mnist_model_convolution.cpp  example_mnist_model_full.cpp  example_or_model.cpp  example_titanic_model.cpp  example_xor_model.cpp  example_xor_model_relu.cpp  example_xor_model_sigmoid.cpp  example_xor_model_tanh.cpp
src/lang/: code_block_statement.hpp  create_dataset_statement.hpp  executable.hpp  executable_script.hpp  execution_context.hpp  exit_statement.hpp  happml_script_init.hpp  happyml_ast_nodes.hpp  happyml_script_init.hpp  happyml_variant.hpp  help_statement.hpp  interpreter.hpp  lexer.hpp  lexer_patterns.hpp  parser.hpp  pattern.hpp  print_statement.hpp  session_state.hpp  simple_interpreter.hpp  spec.md  statements.hpp  thoughts.md  token.hpp
src/lang/lexer/: lexer.hpp  lexer_patterns.hpp  token.hpp
src/lang/parser/: parser.hpp
src/lang/statements/: code_block_statement.hpp  create_dataset_statement.hpp  create_task_statement.hpp  execute_task_statement.hpp  exit_statement.hpp  help_statement.hpp  print_statement.hpp
src/ml/: activation.hpp  adam_optimizer.hpp  base_layer.hpp  byte_pair_encoder.hpp  byte_pair_encoding.hpp  enums.hpp  exit_strategy.hpp  happyml_dsl.hpp  loss.hpp  mbgd_optimizer.hpp  model.hpp  neural_network.hpp  neural_network_function.hpp  neural_network_layer_function.hpp  neural_network_node.hpp  notes.md  optimizer.hpp  optimizer_factory.hpp  rotary_positional_embedding.hpp  sgdm_optimizer.hpp
src/ml/activators/: leaky_relu_activation_function.hpp  linear_activation_function.hpp  relu_activation_function.hpp  sigmoid_activation_function.hpp  sigmoid_approx_activation_function.hpp  softmax_activation_function.hpp  tanh_activation_function.hpp  tanh_approx_activation_function.hpp
src/ml/hyperband/: configuration_evaluator.hpp  hyperband.hpp  hyperband_random_search.hpp  hyperband_space.hpp  resource_allocator.hpp
src/ml/layers/: activation_layer.hpp  bias_layer.hpp  concatenate_wide_layer.hpp  convolution_2d_valid_layer.hpp  dropout_layer.hpp  flatten_layer.hpp  fully_connected_layer.hpp  normalization_layer.hpp
src/ml/losses/: binary_cross_entropy.hpp  categorical_cross_entropy_loss.hpp  future.md  mae_loss.hpp  mse_loss.hpp  smae_loss.hpp
src/ml/optimizers/: adam_optimizer.hpp  mbgd_optimizer.hpp  sgdm_optimizer.hpp
src/parser/: lexer.hpp  parser.hpp
src/test/: basic_profiler.hpp  test_activation.cpp  test_byte_pair_encoding.cpp  test_convolution.cpp  test_create_dataset_statement.cpp  test_data_source.cpp  test_file_reader.cpp  test_half_float.cpp  test_interpreter.cpp  test_lexer.cpp  test_one_hot_encoding.cpp  test_portable_bytes.cpp  test_quarter_float.cpp  test_rotary_positional_embedding.cpp  test_tensor.cpp  test_text_file_sorter.cpp  test_trie.cpp  unit_test.hpp
src/training_data/: data_decoder.hpp  data_encoder.hpp  dataencoder.hpp  generated_datasets.hpp  training_dataset.hpp  training_pair.hpp
src/types/: base_tensors.hpp  float.md  half_float.hpp  materialized_tensors.hpp  quarter_float.hpp  tensor.hpp  tensor_views.hpp  trie.hpp
src/types/tensor_impls/: full_tensor.hpp  half_tensor.hpp  identity_tensor.hpp  pixel_tensor.hpp  quarter_tensor.hpp  tensor_allocators.hpp  tensor_from_function.hpp  tensor_from_random.hpp  tensor_from_xavier.hpp  uniform_tensor.hpp
src/types/tensor_views/: absolute_tensor_view.hpp  add_tensor_view.hpp  channel_to_tensor_view.hpp  clip_tensor_view.hpp  column_flatten_tensor_view.hpp  concat_wide_tensor_view.h  denormalize_tensor_view.hpp  diagonal_tensor_view.hpp  (+90 more)
src/util/: basic_profiler.hpp  byte_pair_encoding.hpp  column_metadata.hpp  data_util.hpp  dataset_utils.hpp  encoder_decoder_builder.hpp  file_reader.hpp  file_writer.hpp  happyml_paths.hpp  index_value.hpp  lru_cache.h  one_hot_encoder.hpp  portable_bytes.hpp  pretty_print_row.hpp  shuffler.hpp  task_utils.hpp  tensor_stats.hpp  tensor_utils.hpp  text_embedder.hpp  text_encoder_decoder.hpp  text_file_encoder_decoder.hpp  text_file_sorter.hpp  timers.hpp  unit_test.hpp
test_data/: duplicate_test.txt  small_mnist_format.csv  unit_test_1.csv  unit_test_2.csv  unit_test_3.csv
